<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">miterm practice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="orginalText">Orginal Text</string>
    <string name="rotationvalue">Rotation Value</string>
    <string name="ciphertext">Cipher Text</string>
    <string name="four">4</string>
    <string name="hint1">Enter text here</string>

</resources>
