<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mitermpractice.MainActivity" >

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orginalText"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/hint1" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/seelBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotationvalue"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/seekBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <SeekBar
            android:id="@+id/rotSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="25"
            android:progress="4" />

        <TextView
            android:id="@+id/rotTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/outputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ciphertext" />

    <EditText
        android:id="@+id/outputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false" />

</LinearLayout>
